# C-Primer_CodeSample_ForLearn

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/chapter10/: 10_stack.h  11_stack.cpp  12_stacker.cpp  1_stock00.h  2_stock00.cpp  3_usestock0.cpp  4_stock10.h  5_stock10.cpp  6_usestock2.cpp  7_stock20.h  8_stock20.cpp  9_usestock2.cpp
src/chapter10/practice/10_1/: account.cpp  account.h  main.cpp
src/chapter10/practice/10_2/: main.cpp  person.cpp  person.h
src/chapter10/practice/10_3/: golf.cpp  golf.h  main.cpp
src/chapter10/practice/10_4/: main.cpp  sales.cpp  sales.h
src/chapter10/practice/10_5/: main.cpp  stack.cpp  stack.h
src/chapter10/practice/10_6/: main.cpp  move.cpp  move.h
src/chapter10/practice/10_7/: main.cpp  plorg.cpp  plorg.h
src/chapter10/practice/10_8/: list.cpp  list.h  main.cpp
src/chapter11/: mytime0.cpp  mytime0.h  mytime1.cpp  mytime1.h  mytime2.cpp  mytime2.h  mytime3.cpp  mytime3.h  randwalk.cpp  stone.cpp  stone1.cpp  stonewt.cpp  stonewt.h  stonewt1.cpp  stonewt1.h  usetime0.cpp  usetime1.cpp  usetime2.cpp  usetime3.cpp  vector.cpp  vector.h
src/chapter11/practice/p1/: randwalk.cpp  vect.cpp  vect.h  walk.txt
src/chapter11/practice/p2/: randwalk.cpp  vect.cpp  vect.h
src/chapter11/practice/p_4/: mytime3.cpp  mytime3.h  usetime3.cpp
src/chapter11/practice/p_5/: main.cpp  stonewt.cpp  stonewt.h
src/chapter11/practice/p_6/: main.cpp  stonewt.cpp  stonewt.h
src/chapter11/practice/p_7/: complex.cpp  complex.h  main.cpp
src/chapter12/: bank.cpp  placenew1.cpp  placenew2.cpp  queue.cpp  queue.h  sayings1.cpp  sayings2.cpp  string1.cpp  string1.h  strngbad.cpp  strngbad.h  vegnews.cpp
src/chapter12/practice/p_1/: cow.cpp  cow.h  main.cpp
src/chapter12/practice/p_2/: main.cpp  string2.cpp  string2.h
src/chapter12/practice/p_3/: stock20.cpp  stock20.h  usestok2.cpp
src/chapter12/practice/p_4/: main.cpp  stack.cpp  stack.h
src/chapter13/: acctabc.cpp  acctabc.h  brass.cpp  brass.h  dma.cpp  dma.h  tabtenn0.cpp  tabtenn0.h  tabtenn1.cpp  tabtenn1.h  usebrass1.cpp  usebrass2.cpp  usebrass3.cpp  usedma.cpp  usett0.cpp  usett1.cpp
src/chapter13/practice/p_1/: classic.cpp  classic.h  main.cpp
src/chapter13/practice/p_2/: classic.cpp  (+2 more)
src/chapter14/: Worker0.cpp  Worker0.h  arraytp.h  frnd2tmp.cpp  manyfrnd.cpp  pairs.cpp  stacktem.cpp  stacktp.h  stcktp1.h  stkoptr1.cpp  student.cpp  student.h  studenti.cpp  studenti.h  tempmemb.cpp  tempparm.cpp  tmp2tmp.cpp  twod.cpp  use_stuc.cpp  workermi.cpp  workermi.h  workmi.cpp  worktest.cpp
src/chapter15/: constcast.cpp  error1.cpp  error2.cpp  error3.cpp  error4.cpp  error5.cpp  exc_mean.h  nested.cpp  newexcp.cpp  queuetp.h  rtti1.cpp  rtti2.cpp  sales.cpp  sales.h  tv.cpp  tv.h  tvfm.h  use_sales.cpp  use_tv.cpp
src/chapter16/: copyit.cpp  fowl.cpp  funadap.cpp  functor.cpp  hangman.cpp  ilist.cpp  inserts.cpp  list.cpp  listrmv.cpp  multimap.cpp  setops.cpp  smrtptrs.cpp  str1.cpp  str2.cpp  strfile.cpp  strgst1.cpp  usealgo.cpp  valvect.cpp  vect1.cpp  vect2.cpp  vect3.cpp  vslice.cpp
src/chapter17/: append.cpp  binary.cpp  check_it.cpp  cinexcp.cpp  count.cpp  defaults.cpp  fileio.cpp  fill.cpp  get_gun.cpp  iomanip.cpp  manip.cpp  peeker.cpp  precise.cpp  random.cpp  setf.cpp  setf2.cpp  showpt.cpp  strin.cpp  strout.cpp  truncate.cpp  width.cpp  write.cpp
src/chapter2/: carrot.cpp  convert.cpp  getinfo.cpp  myfirst.cpp  ourfunc.cpp  sqrt.cpp
src/chapter2/exercise/: test2_1.cpp  test2_2.cpp  test2_3.cpp  test2_5.cpp  test2_6.cpp  test2_7.cpp
src/chapter3/: arith.cpp  assign.cpp  bondini.cpp  chartype.cpp  divide.cpp  exceed.cpp  floatnum.cpp  fltadd.cpp  hexoct.cpp  hexoct2.cpp  limits.cpp  modulus.cpp  morechar.cpp  typecast.cpp
src/chapter3/exercise/: test3_1.cpp  test3_2.cpp  test3_3.cpp
src/chapter4/: 20_ptrstr.cpp  21_newstrct.cpp  22_delete.cpp  23_mixtypes.cpp  24_choices.cpp  addpntrs.cpp  address.cpp  arraynew.cpp  arrayone.cpp  arrstruc.cpp  assgn_st.cpp  init_ptr.cpp  instr1.cpp  instr2.cpp  instr3.cpp  numstr.cpp  pointer.cpp  string.cpp  strtype1.cpp  strtype2.cpp  strtype3.cpp  strtype4.cpp  structur.cpp  use_new.cpp
src/chapter4/exercise/: p_1.cpp  p_10.cpp  p_2.cpp  p_3.cpp  p_4.cpp  p_5.cpp  p_6.cpp  p_7.cpp  p_8.cpp  p_9.cpp
src/chapter5/: 10_equal.cpp  11_compstr1.cpp  12_compstr2.cpp  13_while.cpp  14_waiting.cpp  15_dowhile.cpp  16_textin1.cpp  17_textin2.cpp  18_textin3.cpp  19_textin4.cpp  1_forloop.cpp  20_nested.cpp  2_num_test.cpp  3_express.cpp  4_formore.cpp  5_bigstep.cpp  6_forstr1.cpp  7_plus_one.cpp  8_block.cpp  9_forstr2.cpp
src/chapter5/exercise/: exercise5_10.cpp  exercise5_5.cpp  exercise5_6.cpp  exercise5_7.cpp  exercise5_8.cpp  exercise5_9.cpp  p_1.cpp  p_2.cpp  p_3.cpp  p_4.cpp
src/chapter6/: 10_switch.cpp  11_enum.cpp  12_jump.cpp  13_cinfish.cpp  14_cingolf.cpp  15_outfile.cpp  1_if.cpp  2_ifelse.cpp  3_ifelseif.cpp  4_or.cpp  5_and.cpp  6_more_and.cpp  7_not.cpp  8_cctypes.cpp  9_condit.cpp
src/chapter6/practice/: data6_9.txt  exercise6_8.cpp  exercise6_9.cpp  p_1.cpp  p_2.cpp  p_3.cpp  p_4.cpp  p_5.cpp  p_6.cpp  p_7.cpp
src/chapter7/: 10_strgback.cpp  11_travel.cpp  12_atrctfun.cpp  13_strctptr.cpp  14_topfive.cpp  15_arrobj.cpp  16_recur.cpp  17_ruler.cpp  18_fun_ptr.cpp  19_arfupt.cpp  1_calling.cpp  2_protos.cpp  3_twoarg.cpp  4_lotto.cpp  5_arrfun1.cpp  6_arrfun2.cpp  7_arrfun3.cpp  8_arrfun4.cpp  9_strgfun.cpp
src/chapter7/practice/: p_1.cpp  p_2.cpp  p_3.cpp  p_4.cpp  p_5.cpp  p_6.cpp
src/chapter8/: 10_leftover.cpp  11_funtemp.cpp  12_twotemps.cpp  13_twoswap.cpp  14_temptempover.cpp  15_choices.cpp  1_inline.cpp  2_firstref.cpp  3_sceref.cpp  4_swaps.cpp  5_cubes.cpp  6_strtref.cpp  7_strquote.cpp  8_filefunc.cpp  9_left.cpp
src/chapter8/practice/: P_7.cpp  p_1.cpp  p_2.cpp  p_3.cpp  p_4.cpp  p_5.cpp  p_6.cpp
src/chapter9/: 10_newplace.cpp  11_namesp.h  12_namesp.cpp  13_namessp.cpp  2_file1.cpp  3_file2.cpp  4_auto.cpp  5_external.cpp  6_support.cpp  7_twofile1.cpp  8_twofile2.cpp  9_static.cpp
src/chapter9/include/: 1_coordin.h
src/chapter9/practice/: 9_2.cpp  9_3.cpp
(+49 files in other folders)
