cmake_minimum_required(VERSION 3.20)
project(FirstProject)

set(CMAKE_CXX_STANDARD 20)

add_executable(FirstProject src/main.cpp)

add_executable(myfirst src/chapter2/myfirst.cpp)
add_executable(carrot src/chapter2/carrot.cpp)
add_executable(getinfo src/chapter2/getinfo.cpp)
add_executable(sqrt src/chapter2/sqrt.cpp)
add_executable(ourfunc src/chapter2/ourfunc.cpp)
add_executable(convert src/chapter2/convert.cpp)
add_executable(test2_1 src/chapter2/exercise/test2_1.cpp)
add_executable(test2_2 src/chapter2/exercise/test2_2.cpp)
add_executable(test2_3 src/chapter2/exercise/test2_3.cpp)
add_executable(test2_5 src/chapter2/exercise/test2_5.cpp)
add_executable(test2_6 src/chapter2/exercise/test2_6.cpp)
add_executable(test2_7 src/chapter2/exercise/test2_7.cpp)
add_executable(limits src/chapter3/limits.cpp)
add_executable(exceed src/chapter3/exceed.cpp)
add_executable(hexoct src/chapter3/hexoct.cpp)
add_executable(hexoct2 src/chapter3/hexoct2.cpp)
add_executable(chartype src/chapter3/chartype.cpp)
add_executable(morechar src/chapter3/morechar.cpp)
add_executable(bondini src/chapter3/bondini.cpp)
add_executable(floatnum src/chapter3/floatnum.cpp)
add_executable(fltadd src/chapter3/fltadd.cpp)
add_executable(arith src/chapter3/arith.cpp)
add_executable(divide src/chapter3/divide.cpp)
add_executable(modulus src/chapter3/modulus.cpp)
add_executable(assign src/chapter3/assign.cpp)