cmake_minimum_required(VERSION 3.20)
project(FirstProject)

set(CMAKE_CXX_STANDARD 20)

add_executable(FirstProject src/main.cpp)

add_executable(myfirst src/chapter2/myfirst.cpp)
add_executable(carrot src/chapter2/carrot.cpp)
add_executable(getinfo src/chapter2/getinfo.cpp)
add_executable(sqrt src/chapter2/sqrt.cpp)
add_executable(ourfunc src/chapter2/ourfunc.cpp)
add_executable(convert src/chapter2/convert.cpp)
add_executable(test2_1 src/chapter2/exercise/test2_1.cpp)
add_executable(test2_2 src/chapter2/exercise/test2_2.cpp)
add_executable(test2_3 src/chapter2/exercise/test2_3.cpp)
add_executable(test2_5 src/chapter2/exercise/test2_5.cpp)
add_executable(test2_6 src/chapter2/exercise/test2_6.cpp)
add_executable(test2_7 src/chapter2/exercise/test2_7.cpp)
add_executable(limits src/chapter3/limits.cpp)
add_executable(exceed src/chapter3/exceed.cpp)
add_executable(hexoct src/chapter3/hexoct.cpp)
add_executable(hexoct2 src/chapter3/hexoct2.cpp)
add_executable(chartype src/chapter3/chartype.cpp)
add_executable(morechar src/chapter3/morechar.cpp)
add_executable(bondini src/chapter3/bondini.cpp)
add_executable(floatnum src/chapter3/floatnum.cpp)
add_executable(fltadd src/chapter3/fltadd.cpp)
add_executable(arith src/chapter3/arith.cpp)
add_executable(divide src/chapter3/divide.cpp)
add_executable(modulus src/chapter3/modulus.cpp)
add_executable(assign src/chapter3/assign.cpp)
add_executable(typecast src/chapter3/typecast.cpp)
add_executable(test3_1 src/chapter3/exercise/test3_1.cpp)
add_executable(test3_2 src/chapter3/exercise/test3_2.cpp)
add_executable(test3_3 src/chapter3/exercise/test3_3.cpp)
add_executable(arrayone src/chapter4/arrayone.cpp)
add_executable(string src/chapter4/string.cpp)
add_executable(instr1 src/chapter4/instr1.cpp)
add_executable(instr2 src/chapter4/instr2.cpp)
add_executable(instr3 src/chapter4/instr3.cpp)
add_executable(numstr src/chapter4/numstr.cpp)
add_executable(strtype1 src/chapter4/strtype1.cpp)
add_executable(strtype2 src/chapter4/strtype2.cpp)
add_executable(strtype3 src/chapter4/strtype3.cpp)
add_executable(strtype4 src/chapter4/strtype4.cpp)
add_executable(structur src/chapter4/structur.cpp)
add_executable(assgn_st src/chapter4/assgn_st.cpp)
add_executable(arrstruc src/chapter4/arrstruc.cpp)
add_executable(address src/chapter4/address.cpp)
add_executable(pointer src/chapter4/pointer.cpp)
add_executable(init_ptr src/chapter4/init_ptr.cpp)
add_executable(use_new src/chapter4/use_new.cpp)
add_executable(arraynew src/chapter4/arraynew.cpp)
add_executable(addpntrs src/chapter4/addpntrs.cpp)
add_executable(20_ptrstr src/chapter4/20_ptrstr.cpp)
add_executable(21_newstrct src/chapter4/21_newstrct.cpp)
add_executable(22_delete src/chapter4/22_delete.cpp)
add_executable(23_mixtypes src/chapter4/23_mixtypes.cpp)
add_executable(24_choices src/chapter4/24_choices.cpp)
add_executable(p_2 src/chapter4/exercise/p_2.cpp)
add_executable(p_3 src/chapter4/exercise/p_3.cpp)
add_executable(p_4 src/chapter4/exercise/p_4.cpp)
add_executable(p_5 src/chapter4/exercise/p_5.cpp)
add_executable(p_6 src/chapter4/exercise/p_6.cpp)
add_executable(p_7 src/chapter4/exercise/p_7.cpp)
add_executable(p_8 src/chapter4/exercise/p_8.cpp)
add_executable(p_9 src/chapter4/exercise/p_9.cpp)
add_executable(p_10 src/chapter4/exercise/p_10.cpp)
add_executable(forloop src/chapter5/1_forloop.cpp)
add_executable(2_num_test src/chapter5/2_num_test.cpp)
add_executable(3_express src/chapter5/3_express.cpp)
add_executable(4_formore src/chapter5/4_formore.cpp)
add_executable(5_bigstep src/chapter5/5_bigstep.cpp)
add_executable(6_forstr1 src/chapter5/6_forstr1.cpp)
add_executable(7_plus_one src/chapter5/7_plus_one.cpp)
add_executable(8_block src/chapter5/8_block.cpp)
add_executable(9_forstr2 src/chapter5/9_forstr2.cpp)
add_executable(10_equal src/chapter5/10_equal.cpp)
add_executable(11_compstr1 src/chapter5/11_compstr1.cpp)
add_executable(12_compstr2 src/chapter5/12_compstr2.cpp)
add_executable(13_while src/chapter5/13_while.cpp)
add_executable(14_waiting src/chapter5/14_waiting.cpp)
add_executable(15_dowhile src/chapter5/15_dowhile.cpp)
add_executable(16_textin1 src/chapter5/16_textin1.cpp)
add_executable(17_textin2 src/chapter5/17_textin2.cpp)
add_executable(18_textin3 src/chapter5/18_textin3.cpp)
add_executable(19_textin4 src/chapter5/19_textin4.cpp)
add_executable(20_nested src/chapter5/20_nested.cpp)

add_executable(p_1 src/chapter5/exercise/p_1.cpp)
add_executable(src_chapter4_exercise_p_1 src/chapter4/exercise/p_1.cpp)
add_executable(src_chapter5_exercise_p_2 src/chapter5/exercise/p_2.cpp)
add_executable(src_chapter5_exercise_p_3 src/chapter5/exercise/p_3.cpp)
add_executable(src_chapter5_exercise_p_4 src/chapter5/exercise/p_4.cpp)
add_executable(src_chapter5_exercise_exercise5_5 src/chapter5/exercise/exercise5_5.cpp)
add_executable(src_chapter5_exercise_exercise5_6 src/chapter5/exercise/exercise5_6.cpp)
add_executable(src_chapter5_exercise_exercise5_7 src/chapter5/exercise/exercise5_7.cpp)
add_executable(src_chapter5_exercise_exercise5_8 src/chapter5/exercise/exercise5_8.cpp)
add_executable(src_chapter5_exercise_exercise5_9 src/chapter5/exercise/exercise5_9.cpp)
add_executable(src_chapter5_exercise_exercise5_10 src/chapter5/exercise/exercise5_10.cpp)
add_executable(src_chapter6_1_if src/chapter6/1_if.cpp)
add_executable(src_chapter6_2_ifelse src/chapter6/2_ifelse.cpp)
add_executable(src_chapter6_3_ifelseif src/chapter6/3_ifelseif.cpp)
add_executable(src_chapter6_4_or src/chapter6/4_or.cpp)
add_executable(src_chapter6_5_and src/chapter6/5_and.cpp)
add_executable(src_chapter6_6_more_and src/chapter6/6_more_and.cpp)
add_executable(src_chapter6_7_not src/chapter6/7_not.cpp)
add_executable(src_chapter6_8_cctypes src/chapter6/8_cctypes.cpp)
add_executable(src_chapter6_9_condit src/chapter6/9_condit.cpp)
add_executable(src_chapter6_10_switch src/chapter6/10_switch.cpp)
add_executable(src_chapter6_11_enum src/chapter6/11_enum.cpp)
add_executable(src_chapter6_12_jump src/chapter6/12_jump.cpp)
add_executable(src_chapter6_13_cinfish src/chapter6/13_cinfish.cpp)
add_executable(src_chapter6_14_cingolf src/chapter6/14_cingolf.cpp)
add_executable(src_chapter6_outfile src/chapter6/15_outfile.cpp)
add_executable(src_chapter6_practice_p_1 src/chapter6/practice/p_1.cpp)
add_executable(src_chapter6_practice_p_2 src/chapter6/practice/p_2.cpp)
add_executable(src_chapter6_practice_p_3 src/chapter6/practice/p_3.cpp)
add_executable(src_chapter6_practice_p_4 src/chapter6/practice/p_4.cpp)
add_executable(src_chapter6_practice_p_5 src/chapter6/practice/p_5.cpp)
add_executable(src_chapter6_practice_p_6 src/chapter6/practice/p_6.cpp)
add_executable(src_chapter6_practice_p_7 src/chapter6/practice/p_7.cpp)
add_executable(src_chapter6_practice_exercise6_8 src/chapter6/practice/exercise6_8.cpp)
add_executable(src_chapter6_practice_exercise6_9 src/chapter6/practice/exercise6_9.cpp)
add_executable(src_chapter7_1_calling src/chapter7/1_calling.cpp)
add_executable(src_chapter7_2_protos src/chapter7/2_protos.cpp)
add_executable(src_chapter7_3_twoarg src/chapter7/3_twoarg.cpp)
add_executable(src_chapter7_4_lotto src/chapter7/4_lotto.cpp)
add_executable(src_chapter7_5_arrfun1 src/chapter7/5_arrfun1.cpp)
add_executable(src_chapter7_6_arrfun2 src/chapter7/6_arrfun2.cpp)
add_executable(src_chapter7_arrfun3 src/chapter7/7_arrfun3.cpp)
add_executable(src_chapter7_8_arrfun4 src/chapter7/8_arrfun4.cpp)
add_executable(src_chapter7_9_strgfun src/chapter7/9_strgfun.cpp)
add_executable(src_chapter7_10_strgback src/chapter7/10_strgback.cpp)
add_executable(src_chapter7_11_travel src/chapter7/11_travel.cpp)
add_executable(src_chapter7_12_atrctfun src/chapter7/12_atrctfun.cpp)
add_executable(src_chapter7_strctptr src/chapter7/13_strctptr.cpp)
add_executable(src_chapter7_14_topfive src/chapter7/14_topfive.cpp)
add_executable(src_chapter7_15_arrobj src/chapter7/15_arrobj.cpp)