cmake_minimum_required(VERSION 3.20)
project(FirstProject)

set(CMAKE_CXX_STANDARD 20)

add_executable(FirstProject src/main.cpp)
add_executable(myfirst src/chapter2/myfirst.cpp)
add_executable(carrot src/chapter2/carrot.cpp)
add_executable(getinfo src/chapter2/getinfo.cpp)
add_executable(sqrt src/chapter2/sqrt.cpp)
add_executable(ourfunc src/chapter2/ourfunc.cpp)
add_executable(convert src/chapter2/convert.cpp)
add_executable(test2_1 src/chapter2/exercise/test2_1.cpp)
add_executable(test2_2 src/chapter2/exercise/test2_2.cpp)
add_executable(test2_3 src/chapter2/exercise/test2_3.cpp)
add_executable(test2_5 src/chapter2/exercise/test2_5.cpp)
add_executable(test2_6 src/chapter2/exercise/test2_6.cpp)
add_executable(test2_7 src/chapter2/exercise/test2_7.cpp)
add_executable(limits src/chapter3/limits.cpp)
add_executable(exceed src/chapter3/exceed.cpp)
add_executable(hexoct src/chapter3/hexoct.cpp)
add_executable(hexoct2 src/chapter3/hexoct2.cpp)
add_executable(chartype src/chapter3/chartype.cpp)
add_executable(morechar src/chapter3/morechar.cpp)
add_executable(bondini src/chapter3/bondini.cpp)
add_executable(floatnum src/chapter3/floatnum.cpp)
add_executable(fltadd src/chapter3/fltadd.cpp)
add_executable(arith src/chapter3/arith.cpp)
add_executable(divide src/chapter3/divide.cpp)
add_executable(modulus src/chapter3/modulus.cpp)
add_executable(assign src/chapter3/assign.cpp)
add_executable(typecast src/chapter3/typecast.cpp)
add_executable(test3_1 src/chapter3/exercise/test3_1.cpp)
add_executable(test3_2 src/chapter3/exercise/test3_2.cpp)
add_executable(test3_3 src/chapter3/exercise/test3_3.cpp)
add_executable(arrayone src/chapter4/arrayone.cpp)
add_executable(string src/chapter4/string.cpp)
add_executable(instr1 src/chapter4/instr1.cpp)
add_executable(instr2 src/chapter4/instr2.cpp)
add_executable(instr3 src/chapter4/instr3.cpp)
add_executable(numstr src/chapter4/numstr.cpp)
add_executable(strtype1 src/chapter4/strtype1.cpp)
add_executable(strtype2 src/chapter4/strtype2.cpp)
add_executable(strtype3 src/chapter4/strtype3.cpp)
add_executable(strtype4 src/chapter4/strtype4.cpp)
add_executable(structur src/chapter4/structur.cpp)
add_executable(assgn_st src/chapter4/assgn_st.cpp)
add_executable(arrstruc src/chapter4/arrstruc.cpp)
add_executable(address src/chapter4/address.cpp)
add_executable(pointer src/chapter4/pointer.cpp)
add_executable(init_ptr src/chapter4/init_ptr.cpp)
add_executable(use_new src/chapter4/use_new.cpp)
add_executable(arraynew src/chapter4/arraynew.cpp)
add_executable(addpntrs src/chapter4/addpntrs.cpp)
add_executable(20_ptrstr src/chapter4/20_ptrstr.cpp)
add_executable(21_newstrct src/chapter4/21_newstrct.cpp)
add_executable(22_delete src/chapter4/22_delete.cpp)
add_executable(23_mixtypes src/chapter4/23_mixtypes.cpp)
add_executable(24_choices src/chapter4/24_choices.cpp)
add_executable(p_2 src/chapter4/exercise/p_2.cpp)
add_executable(p_3 src/chapter4/exercise/p_3.cpp)
add_executable(p_4 src/chapter4/exercise/p_4.cpp)
add_executable(p_5 src/chapter4/exercise/p_5.cpp)
add_executable(p_6 src/chapter4/exercise/p_6.cpp)
add_executable(p_7 src/chapter4/exercise/p_7.cpp)
add_executable(p_8 src/chapter4/exercise/p_8.cpp)
add_executable(p_9 src/chapter4/exercise/p_9.cpp)
add_executable(p_10 src/chapter4/exercise/p_10.cpp)
add_executable(forloop src/chapter5/1_forloop.cpp)
add_executable(2_num_test src/chapter5/2_num_test.cpp)
add_executable(3_express src/chapter5/3_express.cpp)
add_executable(4_formore src/chapter5/4_formore.cpp)
add_executable(5_bigstep src/chapter5/5_bigstep.cpp)
add_executable(6_forstr1 src/chapter5/6_forstr1.cpp)
add_executable(7_plus_one src/chapter5/7_plus_one.cpp)
add_executable(8_block src/chapter5/8_block.cpp)
add_executable(9_forstr2 src/chapter5/9_forstr2.cpp)
add_executable(10_equal src/chapter5/10_equal.cpp)
add_executable(11_compstr1 src/chapter5/11_compstr1.cpp)
add_executable(12_compstr2 src/chapter5/12_compstr2.cpp)
add_executable(13_while src/chapter5/13_while.cpp)
add_executable(14_waiting src/chapter5/14_waiting.cpp)
add_executable(15_dowhile src/chapter5/15_dowhile.cpp)
add_executable(16_textin1 src/chapter5/16_textin1.cpp)
add_executable(17_textin2 src/chapter5/17_textin2.cpp)
add_executable(18_textin3 src/chapter5/18_textin3.cpp)
add_executable(19_textin4 src/chapter5/19_textin4.cpp)
add_executable(20_nested src/chapter5/20_nested.cpp)
add_executable(p_1 src/chapter5/exercise/p_1.cpp)
add_executable(src_chapter4_exercise_p_1 src/chapter4/exercise/p_1.cpp)
add_executable(src_chapter5_exercise_p_2 src/chapter5/exercise/p_2.cpp)
add_executable(src_chapter5_exercise_p_3 src/chapter5/exercise/p_3.cpp)
add_executable(src_chapter5_exercise_p_4 src/chapter5/exercise/p_4.cpp)
add_executable(src_chapter5_exercise_exercise5_5 src/chapter5/exercise/exercise5_5.cpp)
add_executable(src_chapter5_exercise_exercise5_6 src/chapter5/exercise/exercise5_6.cpp)
add_executable(src_chapter5_exercise_exercise5_7 src/chapter5/exercise/exercise5_7.cpp)
add_executable(src_chapter5_exercise_exercise5_8 src/chapter5/exercise/exercise5_8.cpp)
add_executable(src_chapter5_exercise_exercise5_9 src/chapter5/exercise/exercise5_9.cpp)
add_executable(src_chapter5_exercise_exercise5_10 src/chapter5/exercise/exercise5_10.cpp)
add_executable(src_chapter6_1_if src/chapter6/1_if.cpp)
add_executable(src_chapter6_2_ifelse src/chapter6/2_ifelse.cpp)
add_executable(src_chapter6_3_ifelseif src/chapter6/3_ifelseif.cpp)
add_executable(src_chapter6_4_or src/chapter6/4_or.cpp)
add_executable(src_chapter6_5_and src/chapter6/5_and.cpp)
add_executable(src_chapter6_6_more_and src/chapter6/6_more_and.cpp)
add_executable(src_chapter6_7_not src/chapter6/7_not.cpp)
add_executable(src_chapter6_8_cctypes src/chapter6/8_cctypes.cpp)
add_executable(src_chapter6_9_condit src/chapter6/9_condit.cpp)
add_executable(src_chapter6_10_switch src/chapter6/10_switch.cpp)
add_executable(src_chapter6_11_enum src/chapter6/11_enum.cpp)
add_executable(src_chapter6_12_jump src/chapter6/12_jump.cpp)
add_executable(src_chapter6_13_cinfish src/chapter6/13_cinfish.cpp)
add_executable(src_chapter6_14_cingolf src/chapter6/14_cingolf.cpp)
add_executable(src_chapter6_outfile src/chapter6/15_outfile.cpp)
add_executable(src_chapter6_practice_p_1 src/chapter6/practice/p_1.cpp)
add_executable(src_chapter6_practice_p_2 src/chapter6/practice/p_2.cpp)
add_executable(src_chapter6_practice_p_3 src/chapter6/practice/p_3.cpp)
add_executable(src_chapter6_practice_p_4 src/chapter6/practice/p_4.cpp)
add_executable(src_chapter6_practice_p_5 src/chapter6/practice/p_5.cpp)
add_executable(src_chapter6_practice_p_6 src/chapter6/practice/p_6.cpp)
add_executable(src_chapter6_practice_p_7 src/chapter6/practice/p_7.cpp)
add_executable(src_chapter6_practice_exercise6_8 src/chapter6/practice/exercise6_8.cpp)
add_executable(src_chapter6_practice_exercise6_9 src/chapter6/practice/exercise6_9.cpp)
add_executable(src_chapter7_1_calling src/chapter7/1_calling.cpp)
add_executable(src_chapter7_2_protos src/chapter7/2_protos.cpp)
add_executable(src_chapter7_3_twoarg src/chapter7/3_twoarg.cpp)
add_executable(src_chapter7_4_lotto src/chapter7/4_lotto.cpp)
add_executable(src_chapter7_5_arrfun1 src/chapter7/5_arrfun1.cpp)
add_executable(src_chapter7_6_arrfun2 src/chapter7/6_arrfun2.cpp)
add_executable(src_chapter7_arrfun3 src/chapter7/7_arrfun3.cpp)
add_executable(src_chapter7_8_arrfun4 src/chapter7/8_arrfun4.cpp)
add_executable(src_chapter7_9_strgfun src/chapter7/9_strgfun.cpp)
add_executable(src_chapter7_10_strgback src/chapter7/10_strgback.cpp)
add_executable(src_chapter7_11_travel src/chapter7/11_travel.cpp)
add_executable(src_chapter7_12_atrctfun src/chapter7/12_atrctfun.cpp)
add_executable(src_chapter7_strctptr src/chapter7/13_strctptr.cpp)
add_executable(src_chapter7_14_topfive src/chapter7/14_topfive.cpp)
add_executable(src_chapter7_15_arrobj src/chapter7/15_arrobj.cpp)
add_executable(src_chapter7_16_recur src/chapter7/16_recur.cpp)
add_executable(src_chapter7_17_ruler src/chapter7/17_ruler.cpp)
add_executable(src_chapter7_18_fun_ptr src/chapter7/18_fun_ptr.cpp)
add_executable(src_chapter7_19_arfupt src/chapter7/19_arfupt.cpp)
add_executable(src_chapter7_practice_p_1 src/chapter7/practice/p_1.cpp)
add_executable(src_chapter7_practice_p_2 src/chapter7/practice/p_2.cpp)
add_executable(src_chapter7_practice_p_3 src/chapter7/practice/p_3.cpp)
add_executable(src_chapter7_practice_p_4 src/chapter7/practice/p_4.cpp)
add_executable(src_chapter7_practice_p_5 src/chapter7/practice/p_5.cpp)
add_executable(src_chapter7_practice_p_6 src/chapter7/practice/p_6.cpp)
add_executable(src_chapter8_1_inline src/chapter8/1_inline.cpp)
add_executable(src_chapter8_2_firstref src/chapter8/2_firstref.cpp)
add_executable(src_chapter8_3_sceref src/chapter8/3_sceref.cpp)
add_executable(src_chapter8_4_swaps src/chapter8/4_swaps.cpp)
add_executable(src_chapter8_5_cubes src/chapter8/5_cubes.cpp)
add_executable(src_chapter8_6_strtref src/chapter8/6_strtref.cpp)
add_executable(src_chapter8_7_strquote src/chapter8/7_strquote.cpp)
add_executable(src_chapter8_8_filefunc src/chapter8/8_filefunc.cpp)
add_executable(src_chapter8_9_left src/chapter8/9_left.cpp)
add_executable(src_chapter8_10_leftover src/chapter8/10_leftover.cpp)
add_executable(src_chapter8_11_funtemp src/chapter8/11_funtemp.cpp)
add_executable(src_chapter8_12_twotemps src/chapter8/12_twotemps.cpp)
add_executable(src_chapter8_13_twoswap src/chapter8/13_twoswap.cpp)
add_executable(src_chapter8_14_temptempover src/chapter8/14_temptempover.cpp)
add_executable(src_chapter8_15_choices src/chapter8/15_choices.cpp)
add_executable(src_chapter8_practice_p_1 src/chapter8/practice/p_1.cpp)
add_executable(src_chapter8_practice_p_2 src/chapter8/practice/p_2.cpp)
add_executable(src_chapter8_practice_p_3 src/chapter8/practice/p_3.cpp)
add_executable(src_chapter8_practice_p_4 src/chapter8/practice/p_4.cpp)
add_executable(src_chapter8_practice_p_5 src/chapter8/practice/p_5.cpp)
add_executable(src_chapter8_practice_p_6 src/chapter8/practice/p_6.cpp)
add_executable(src_chapter8_practice_P_7 src/chapter8/practice/P_7.cpp)
add_executable(src_chapter9_2_file1 src/chapter9/2_file1.cpp src/chapter9/include/1_coordin.h src/chapter9/3_file2.cpp)
add_executable(src_chapter9_4_auto src/chapter9/4_auto.cpp)
add_executable(src_chapter9_5_external src/chapter9/5_external.cpp src/chapter9/6_support.cpp)
add_executable(src_chapter9_7_twofile1 src/chapter9/7_twofile1.cpp src/chapter9/8_twofile2.cpp)
add_executable(src_chapter9_9_static src/chapter9/9_static.cpp)
add_executable(src_chapter9_10_newplace src/chapter9/10_newplace.cpp)
add_executable(src_chapter9_13_namessp src/chapter9/13_namessp.cpp src/chapter9/11_namesp.h src/chapter9/12_namesp.cpp)
add_executable(src_chapter9_practice_p1_dir_main src/chapter9/practice/p1_dir/main.cpp src/chapter9/practice/p1_dir/golf.cpp src/chapter9/practice/p1_dir/golf.h)
add_executable(src_chapter9_practice_9_2 src/chapter9/practice/9_2.cpp)
add_executable(src_chapter9_practice_9_3 src/chapter9/practice/9_3.cpp)
add_executable(src_chapter9_practice_9_4_main src/chapter9/practice/9_4/main.cpp src/chapter9/practice/9_4/sales.h src/chapter9/practice/9_4/sales.cpp)
add_executable(src_chapter10_3_usestock0 src/chapter10/3_usestock0.cpp src/chapter10/1_stock00.h src/chapter10/2_stock00.cpp)
add_executable(src_chapter10_6_usestock2 src/chapter10/6_usestock2.cpp src/chapter10/4_stock10.h src/chapter10/5_stock10.cpp)
add_executable(src_chapter10_9_usestock2 src/chapter10/9_usestock2.cpp src/chapter10/7_stock20.h src/chapter10/8_stock20.cpp)
add_executable(src_chapter10_12_stacker src/chapter10/12_stacker.cpp src/chapter10/10_stack.h src/chapter10/11_stack.cpp)
add_executable(src_chapter10_practice_10_1_main src/chapter10/practice/10_1/main.cpp src/chapter10/practice/10_1/account.h src/chapter10/practice/10_1/account.cpp)
add_executable(src_chapter10_practice_10_2_main src/chapter10/practice/10_2/main.cpp src/chapter10/practice/10_2/person.cpp src/chapter10/practice/10_2/person.h)
add_executable(src_chapter10_practice_10_3_main src/chapter10/practice/10_3/main.cpp src/chapter10/practice/10_3/golf.cpp src/chapter9/practice/p1_dir/golf.h)
add_executable(src_chapter10_practice_10_4_main src/chapter10/practice/10_4/main.cpp src/chapter10/practice/10_4/sales.cpp src/chapter10/practice/10_4/sales.h)
add_executable(src_chapter10_practice_10_5_main src/chapter10/practice/10_5/main.cpp src/chapter10/practice/10_5/stack.cpp src/chapter10/practice/10_5/stack.h)
add_executable(src_chapter10_practice_10_6_main src/chapter10/practice/10_6/main.cpp src/chapter10/practice/10_6/move.cpp src/chapter10/practice/10_6/move.h)
add_executable(src_chapter10_practice_10_7_main src/chapter10/practice/10_7/main.cpp src/chapter10/practice/10_7/plorg.cpp src/chapter10/practice/10_7/plorg.h)
add_executable(src_chapter10_practice_10_8_main src/chapter10/practice/10_8/main.cpp src/chapter10/practice/10_8/list.cpp src/chapter10/practice/10_8/list.h)
add_executable(src_chapter11_usetime0 src/chapter11/usetime0.cpp src/chapter11/mytime0.cpp src/chapter11/mytime0.h)
add_executable(src_chapter11_usetime1 src/chapter11/usetime1.cpp src/chapter11/mytime1.cpp src/chapter11/mytime1.h)
add_executable(src_chapter11_usetime2 src/chapter11/usetime2.cpp src/chapter11/mytime2.cpp src/chapter11/mytime2.h)
add_executable(src_chapter11_usetime3 src/chapter11/usetime3.cpp src/chapter11/mytime3.cpp src/chapter11/mytime3.h)
add_executable(src_chapter11_randwalk src/chapter11/randwalk.cpp src/chapter11/vector.cpp src/chapter11/vector.h)
add_executable(src_chapter11_stone src/chapter11/stone.cpp src/chapter11/stonewt.cpp src/chapter11/stonewt.h)
add_executable(src_chapter11_stone1 src/chapter11/stone1.cpp src/chapter11/stonewt1.h src/chapter11/stonewt1.cpp)
add_executable(src_chapter11_practice_p1_randwalk src/chapter11/practice/p1/randwalk.cpp src/chapter11/practice/p1/vect.cpp src/chapter11/practice/p1/vect.h)
add_executable(src_chapter11_practice_p2_randwalk src/chapter11/practice/p2/randwalk.cpp src/chapter11/practice/p2/vect.h src/chapter11/practice/p2/vect.cpp)
add_executable(src_chapter11_practice_p_4_usetime3 src/chapter11/practice/p_4/usetime3.cpp src/chapter11/practice/p_4/mytime3.h src/chapter11/practice/p_4/mytime3.cpp)
add_executable(src_chapter11_practice_p_5_main src/chapter11/practice/p_5/main.cpp src/chapter11/practice/p_5/stonewt.cpp src/chapter11/practice/p_5/stonewt.h)
add_executable(src_chapter11_practice_p_6_main src/chapter11/practice/p_6/main.cpp src/chapter11/practice/p_6/stonewt.h src/chapter11/practice/p_6/stonewt.cpp)
add_executable(src_chapter11_practice_p_7_main src/chapter11/practice/p_7/main.cpp src/chapter11/practice/p_7/complex.cpp src/chapter11/practice/p_7/complex.h)
add_executable(src_chapter12_vegnews src/chapter12/vegnews.cpp src/chapter12/strngbad.cpp src/chapter12/strngbad.h)
add_executable(src_chapter12_sayings1 src/chapter12/sayings1.cpp src/chapter12/string1.h src/chapter12/string1.cpp)
add_executable(src_chapter12_sayings2 src/chapter12/sayings2.cpp)
add_executable(src_chapter12_placenew1 src/chapter12/placenew1.cpp)
add_executable(src_chapter12_placenew2 src/chapter12/placenew2.cpp)
add_executable(src_chapter12_bank src/chapter12/bank.cpp)
add_executable(src_chapter12_practice_p_1_main src/chapter12/practice/p_1/main.cpp src/chapter12/practice/p_1/cow.h src/chapter12/practice/p_1/cow.cpp)
add_executable(src_chapter12_practice_p_2_main src/chapter12/practice/p_2/main.cpp src/chapter12/practice/p_2/string2.cpp src/chapter12/practice/p_2/string2.h)
add_executable(src_chapter12_practice_p_3_main src/chapter12/practice/p_3/usestok2.cpp src/chapter12/practice/p_3/stock20.cpp src/chapter12/practice/p_3/stock20.h)
add_executable(src_chapter12_practice_p_4_main src/chapter12/practice/p_4/main.cpp src/chapter12/practice/p_4/stack.cpp src/chapter12/practice/p_4/stack.h)
add_executable(src_chapter13_usett0 src/chapter13/usett0.cpp src/chapter13/tabtenn0.cpp src/chapter13/tabtenn0.h)
add_executable(src_chapter13_usett1 src/chapter13/usett1.cpp src/chapter13/tabtenn1.cpp src/chapter13/tabtenn1.h)
add_executable(src_chapter13_usebrass1 src/chapter13/usebrass1.cpp src/chapter13/brass.cpp src/chapter13/brass.h)
add_executable(src_chapter13_usebrass2 src/chapter13/usebrass2.cpp src/chapter13/brass.cpp src/chapter13/brass.h)
add_executable(src_chapter13_usebrass3 src/chapter13/usebrass3.cpp src/chapter13/acctabc.cpp src/chapter13/acctabc.h)
add_executable(src_chapter13_usedma src/chapter13/usedma.cpp src/chapter13/dma.cpp src/chapter13/dma.h)
add_executable(src_chapter13_practice_p_1_main src/chapter13/practice/p_1/main.cpp src/chapter13/practice/p_1/classic.cpp src/chapter13/practice/p_1/classic.h)
add_executable(src_chapter13_practice_p_2_main src/chapter13/practice/p_2/main.cpp src/chapter13/practice/p_2/classic.cpp src/chapter13/practice/p_2/classic.h)
add_executable(src_chapter13_practice_p_4_main src/chapter13/practice/p_4/main.cpp src/chapter13/practice/p_4/port.cpp src/chapter13/practice/p_4/port.h)
add_executable(src_chapter14_use_stuc src/chapter14/use_stuc.cpp src/chapter14/student.cpp src/chapter14/student.h)
add_executable(src_chapter14_worktest src/chapter14/worktest.cpp src/chapter14/Worker0.cpp src/chapter14/Worker0.h)